--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,9 @@
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' fill='%23e0e5ec'%3E%3Crect width='512' height='512' fill='%23e0e5ec'/%3E%3Cpath d='M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C93.6 409.5 128 448 128 448s4.6-19.4 11.2-40.8C163.2 396.1 192 384 192 384s-3.7-16.1-3.7-32c0-17.7 3.7-32 3.7-32s-28.8-12.1-52.8-23.2C114.6 286 32 240 32 240s82.6 46 128 56.8V224h256v72.8c45.4-10.8 128-56.8 128-56.8s-82.6 46-107.2 56.8c-24 11.1-52.8 23.2-52.8 23.2s3.7 14.3 3.7 32c0 15.9-3.7 32-3.7 32s28.8 12.1 52.8 23.2c6.6 21.4 11.2 40.8 11.2 40.8s34.4-38.5 71-77.3C490.6 335 512 289.6 512 240 512 125.1 397.4 32 256 32z' fill='%230055ff'/%3E%3Cpath d='M192 224h128v-32H192v32zm0-64h128v-32H192v32z' fill='%23ffffff'/%3E%3C/svg%3E",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 }
