--- a/manifest.json
+++ b/manifest.json
@@ -4,26 +4,32 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#e0e5ec",
-  "theme_color": "#007aff",
+  "theme_color": "#e0e5ec",
   "description": "우성고등학교 법인카드 및 특근매식비 신청/반납 시스템",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "splash-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
+      "src": "splash-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "icon-192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
