--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,23 @@
 {
   "name": "우성고 카드 시스템",
   "short_name": "우성고 카드",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#e0e5ec",
   "theme_color": "#e0e5ec",
   "description": "우성고등학교 법인카드 및 특근매식비 신청/반납 시스템",
   "icons": [
     {
-      "src": "icon-192-maskable.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     },
     {
-      "src": "icon-512-maskable.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     },
     {
       "src": "splash-icon-192.png",
@@ -30,6 +30,18 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "icon-192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
