--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "우성고 카드 시스템",
   "short_name": "우성고 카드",
-  "start_url": "/wscard/",
-  "scope": "/wscard/",
+  "start_url": "/wscard2/",
+  "scope": "/wscard2/",
   "display": "standalone",
   "background_color": "#e0e5ec",
   "theme_color": "#e0e5ec",
   "description": "우성고등학교 법인카드 및 특근매식비 신청/반납 시스템",
   "icons": [
-    { "src": "/wscard/icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
-    { "src": "/wscard/icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
-    { "src": "/wscard/splash-icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
-    { "src": "/wscard/splash-icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
-    { "src": "/wscard/icon-192-maskable.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
-    { "src": "/wscard/icon-512-maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "/wscard2/icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "/wscard2/icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
+    { "src": "/wscard2/splash-icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "/wscard2/splash-icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
+    { "src": "/wscard2/icon-192-maskable.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
+    { "src": "/wscard2/icon-512-maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ]
 }
